--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/EzraAmani/'"
+                onclick="location.href='https://github.com/EzraAmani/shoppingcart'"
               >
                 Github
               </button>
